--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -16,7 +16,7 @@
     
 
     <nav class="container-fluid bg-black mx-auto flex items-center justify-between py-4 flex-wrap fixed w-full z-10 top-0">
-        <div class="brand mr-5">
+        <div class="brand ml-5">
             <a href="/">HotelBook</a>
         </div>
         <div class="block lg:hidden">
