--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -1,10 +1,10 @@
 
-    <section class="hero py-16">
+    <section class="hero py-24 mt-20">
         <div class="container mx-auto flex items-center justify-between">
             <div class="w-1/2 content">
                 <h1 class="text-3xl md:text-6xl font-bold">Don't wait !</h1>
                 <a href="#hotels" class="px-6 py-2 rounded-full text-white font-bold mt-4 btn-primary">Book Now</a>
-                <h3 class="font-bold py-4">Paid for one day rest after checkout</h3>
+                <h3 class="font-bold py-4">Paid for one day rest after checkout/checkIn</h3>
             </div>
         </div>
     </section>
