--- a/resources/views/auth/login.ejs
+++ b/resources/views/auth/login.ejs
@@ -1,4 +1,4 @@
-<section class="login flex justify-center pt-24">
+<section class="login flex justify-center pt-24 mt-20">
     <div class="w-full max-w-xs">
         <form action="/login" method="POST" class="bg-black shadow-md rounded px-8 pt-6 pb-8 mb-4">
             <% if(messages.error) { %>
