--- a/resources/views/customers/cancel.ejs
+++ b/resources/views/customers/cancel.ejs
@@ -55,7 +55,7 @@
                         <%= moment(book.bookedTime).format('LLLL') %>
                     </td>
                     <td class="border px-4 py-2">
-                        <%= moment(book.canceledTime).format('LLLL') %>
+                        <%= moment(book.updatedTime).format('LLLL') %>
                     </td>
                     <td class="border px-4 py-2">
                         ₹<%= book.refundedAmount %>
